more queue opt cosmos

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dean_utils"
-version="0.0.20"
+version="0.0.21"
 authors=[
     { name="Dean MacGregor", email="powertrading121@gmail.com"}
 ]
@@ -19,7 +19,10 @@ dependencies=[
     "fsspec",
     "azure-storage-queue",
     "python-multipart",
-    "azure-cosmos",
     "azure-communication-email"
-
     ]
+
+[project.optional-dependencies]
+cosmos = [
+"azure-cosmos",
+]
